assets/featured-collection.css
.featured-collection-wrapper {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    height: max-content;
    padding: 50px 0px;
    user-select: none;
    background-color: #0d3135;
    
}

.featured-collection {
    width: 80dvw;
    max-width: 1400px;
    height: max-content;
    display: flex;
    gap: 2%;
    flex-shrink: 0;
    position: relative;
}

.collection-image {
    width: 400px;
    height: auto;
    border-radius: 20px;
    overflow: hidden;
    position: relative;
    display: flex;
    justify-content: center;
}

.short_title {
    color: #0d3135;
    font-size: 20px;
}

.collection-name {
    padding: 0px;
    margin: 0px;
    color: white;
    position: absolute;
    text-align: center;
    width: 100%;
    height: max-content;
    z-index: 2;
    top: 45%;
    bottom: 50%;
    font-size: 35px;
    font-weight: bold;
    text-shadow: 0px 0px 5px black;
}

.collection-image img {
    height: 100%;
    width: 100%;
    object-fit: cover;
    -webkit-user-drag: none;
    user-select: none;
}

.collection-products-wrapper {
    width: 75%;
    border-radius: 20px;
    overflow-y: hidden;
    overflow-x: scroll;
    white-space: normal;
    -ms-overflow-style: none;
    scrollbar-width: none;
}

.collection-products-wrapper::-webkit-scrollbar {
    display: none;
}

.collection-products {
    width: max-content;
    height: 100%;
    display: flex;
    justify-content: flex-start;
    gap: 1%;
    flex-shrink: 0;
}

.product-card {
    height: 500px;
    width: 280px;
    background-color: #f2f2f2;
    overflow: hidden;
    border-radius: 20px;
    display: flex;
    flex-direction: column;
    position: relative;
}

.product-image {
    height: 60%;
    -webkit-user-drag: none;
    user-select: none;
    pointer-events: none;
    padding: 15px;
}

.product-image img {
    border-radius: 20px;
    object-fit: contain;
    -webkit-user-drag: none;
    user-select: none;
    pointer-events: none;
}

.product-card p {
    padding: 0px;
    margin: 0px;
}


.product-information {
    padding: 5%;
    font-weight: bold;
}

.product-title {
    width: 100%;
    color: #0d3135;
    font-weight: bold;
}

.product-title:hover,.short_title:hover {
    color: #0d3135c7;
}

.product-prices {
    font-size: 21px;
    font-weight: bold;
}

.buttons {
    width: 100%;
    padding: 0% 3%;
    pointer-events: all !important;
    display: flex;
    align-items: center;
    gap: 10px;
    justify-self: flex-end;
    position: absolute;
    bottom: 10px;
}


.prev_button,.next_button {
    all: unset;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #f2f2f2;
    font-size: 20px;
    height: 20px;
    width: 20px;
    padding: 10px;
    background-color: #f2f2f223;
    border-radius: 999px;
    transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.prev_button {
    position: absolute;
    left: -5%;
    top: 50%;
}
.next_button {
    margin-left: 15px;
}


.prev_button:hover,.next_button:hover {
    transform: scale(0.85);
    background-color: #f2f2f2;
    color: black;
}



button.buy-now-button {
    all: unset;
    color: #0d3135;
    padding: 3px 25px;
    background-color: #F7995F;
    border-radius: 999px;
    transition: 200ms cubic-bezier(0.075, 0.82, 0.165, 1);
    cursor: pointer;
}

button.buy-now-button:hover {
    background-color: rgb(22, 22, 22);
    color: rgb(255, 255, 255);
    scale: 0.95;
}

button.add-to-cart-button:hover {
    background-color: rgb(22, 22, 22);
    scale: 0.95;
}

button.add-to-cart-button:hover > img {
    filter: invert(97%) sepia(44%) saturate(0%) hue-rotate(98deg) brightness(105%) contrast(103%);
}

.add-to-cart-button {
    all: unset;
    color: #0d3135;
    background-color: #F7995F;
    border-radius: 50%;
    padding: 8px;
    font-weight: bold;
    transition: 200ms cubic-bezier(0.075, 0.82, 0.165, 1);
    cursor: pointer;
    height: 17px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.saudi-price-holder {
    padding-top: 5px;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 10px;
}


/* Responiveness */

@media (max-width: 450px) {
    .featured-collection {
        flex-direction: column;
        gap: 15px;
        width: 90dvw;
    }

    .collection-products-wrapper {
        width: 100%;
        border-radius: 15px;
    }

    .collection-image {
        width: 100%;
        height: auto;
        border-radius: 15px;
    }

    .collection-image a {
        width: 100%;
    }

    .product-card {
        width: 46dvw;
        height: 320px;
        max-height: 500px;
        padding-bottom: 45px;
        border-radius: 15px;
    }

    .product-image img {
        border-radius: 15px;
    }

    .product-title {
        font-size: 15px;
    }

    .product-prices {
        font-size: 18px;
        padding: 5px 0px;
    }

    .buttons {
        padding: 0px;
        font-size: 13px;
        gap: 5px;
        bottom: 7px;
        left: -5px;
    }

    button.buy-now-button {
        padding: 5px 15px;
    }
 
    .add-to-cart-button {
        height: 11px;
        padding: 5px;
    }

    .prev_button{
        display: none;
    }
}

